--- a/style.css
+++ b/style.css
@@ -115,10 +115,10 @@ button.know, button.dont-know, button.flip-btn {
 }
 
 .flip-btn {
-    width: 40px;
-    height: 40px;
+    margin-top: -10px;
+    margin-right: -8px;
     align-self: flex-end;
-    background: #1f5eff;
+    background: rgba(255,255,255,0.1);
     color: #fff;
 }
 
@@ -158,3 +158,4 @@ button.know, button.dont-know, button.flip-btn {
     transform: scale(1.1);
     background: rgba(255,255,255,0.2);
 }
+
